--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Creating websites, Apps that make you stop & stare</h1>
-          <h2>DevMan provides you the better IT solutions for your product. We are able to create websites, web-apps, mobile-apps
-            and able to fulfill all your tech needs. Give us a one chance and see the difference.</h2>
+          <h2>DevMan provides you better IT solutions for your product. We can create websites, web apps, mobile apps, and able to fulfill all your tech needs. Give us a one chance and see the difference.</h2>
           <div><a href="#about" class="btn-get-started scrollto">Get Started</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
