--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="company-icon">
-  <link href="assets/img/logo.png" rel="company-logo">
-
+   <link href="assets/img/favicon.ico" rel="icon">
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i"
@@ -48,7 +46,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto " href="#contact">Carrers</a></li>
+          <li><a class="nav-link scrollto " href="https://forms.gle/mC5g3yTuzqedSGVt7" target="__blank">Carrers</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
