--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <section id="clients" class="clients text-center">
       <div class="container">
         <h2 class="text-center">Need solutions or want to discuss idea! <br></h2><br><br>
-        <button type="button" class="btn btn-primary">Send Message</button>
+        <a href="mailto:devmanpvt@gmail.com"><button type="button" class="btn btn-primary">Send Message</button></a>
         <a href="tel:9870538621"><button type="button" class="btn btn-success">Call us</button></a>
         <!-- <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
 
@@ -625,7 +625,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <!-- <form action="mail.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -646,8 +646,25 @@
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+            </form> -->
 
+             <form class="php-email-form">
+              <div class="row">
+                <div class="col-md-6 form-group">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                </div>
+                <div class="col-md-6 form-group mt-3 mt-md-0">
+                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                </div>
+              </div>
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+              </div>
+              <div class="form-group mt-3">
+                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+              </div>
+            </form> 
+            <a href="mailto:devmanpvt@gmail.com"><div class="text-center php-email-form"><button type="submit">Send Message</button></div></a>
           </div>
 
         </div>
