--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <a href="https://www.instagram.com/devmanpvt/" target="__blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/company/devman-pvt-ltd/?viewAsMember=true" target="__blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://github.com/DevManPvtLtd" class="github"><i class="bx bxl-github"></i></a>
 
