Added meta tags

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>DevMan Pvt. Ltd. </title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Emerging IT company that serves all your id needs" name="description">
+  <meta content="DevMan Pvt. Ltd." name="copyright">
+  <meta content="DevMan Pvt. Ltd., Devman, IT services, IT company, create website, create mobile apps, create android apps, IT solutions" name="keywords">
+  
+  <title>DevMan Pvt. Ltd.</title>
 
   <!-- Favicons -->
   <link href="assets/img/logo.png" rel="company-icon">
