Added meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Emerging IT company that serves all your id needs" name="description">
   <meta content="DevMan Pvt. Ltd." name="copyright">
-  <meta content="DevMan Pvt. Ltd., Devman, IT services, IT company, create website, create mobile apps, create android apps, IT solutions" name="keywords">
+  <meta content="DevMan Pvt. Ltd., Devman, IT solutions, IT services, IT company, create website, create mobile apps, create android apps, Development" name="keywords">
   
   <title>DevMan Pvt. Ltd.</title>
 
@@ -620,7 +620,7 @@
             <img width="" height="200px" src="assets/img/logo.png" />
             <h3>DevMan Pvt. Ltd.</h3>
             <p>
-              New Delhi (based), India<br><br>
+              Based in New Delhi, India<br><br>
               <strong>Phone:</strong> +91 9870538621, 9555625605<br>
               <strong>Email:</strong> devmanpvt@gmail.com<br>
             </p>
