Added Meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Meta Tags -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="Emerging IT company that serves all your id needs" name="description">
+  <meta content="Emerging IT company that serves all your IT needs" name="description">
   <meta content="DevMan Pvt. Ltd." name="copyright">
   <meta content="DevMan Pvt. Ltd., Devman, IT solutions, IT services, IT company, create website, create mobile apps, create android apps, Development" name="keywords">
   
