--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
@@ -532,6 +533,9 @@
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>devmanpvt@gmail.com</p>
+                <p>support@devmanpvtltd.co</p>
+                <p>admin@devmanpvtltd.co</p>
+
               </div>
 
               <div class="phone">
@@ -676,9 +680,13 @@
     </div>
   </footer><!-- End Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
-
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
+  <a href="https://api.whatsapp.com/send?phone=+919870538621&text=Hi!" class="float" target="_blank">     
+      <i class="fa fa-whatsapp my-float"></i>
+      <span class="tooltiptext">Send us a Hi!</span>
+  </a>
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
