--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center">
     <i class="bi bi-arrow-up-short"></i>
   </a>
-  <a href="https://api.whatsapp.com/send?phone=+919870538621&text=Hi!" class="float" target="_blank">     
+  <a href="https://api.whatsapp.com/send?phone=+919870538621&text=Hi Himanshu, I want to know about IT services that DevMan is providing. So pls let me know!!" class="float" target="_blank">     
       <i class="fa fa-whatsapp my-float"></i>
       <span class="tooltiptext">Send us a Hi!</span>
   </a>
