changed mail id

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <section id="clients" class="clients text-center">
       <div class="container">
         <h2 class="text-center">Need solutions or want to discuss idea! <br></h2><br><br>
-        <a href="mailto:devmanpvt@gmail.com"><button type="button" class="btn btn-primary">Send Message</button></a>
+        <a href="mailto:support@devmanpvtltd.co"><button type="button" class="btn btn-primary">Send Message</button></a>
         <a href="tel:9870538621"><button type="button" class="btn btn-success">Call us</button></a>
         <!-- <div class="row no-gutters clients-wrap clearfix wow fadeInUp">
 
@@ -589,7 +589,7 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
             </form> 
-            <a href="mailto:devmanpvt@gmail.com"><div class="text-center php-email-form"><button type="submit">Send Message</button></div></a>
+            <a href="mailto:admin@devmanpvt.co"><div class="text-center php-email-form"><button type="submit">Send Message</button></div></a>
           </div>
 
         </div>
@@ -626,7 +626,7 @@
             <p>
               Based in New Delhi, India<br><br>
               <strong>Phone:</strong> +91 9870538621, 9555625605<br>
-              <strong>Email:</strong> devmanpvt@gmail.com<br>
+              <strong>Email:</strong> admin@devmanpvtltd.co<br>
             </p>
           </div>
 
