--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="https://devman-open-source.netlify.app/" target="__blank">Students</a></li>
           <li><a class="nav-link scrollto " href="https://forms.gle/mC5g3yTuzqedSGVt7" target="__blank">Carrers</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
