Added More projects

--- a/index.html
+++ b/index.html
@@ -333,29 +333,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/port.png" class="img-fluid" alt="kurakoo logo">
+              <img src="assets/img/portfolio/portfolio/studyindiabadhoindia.png" class="img-fluid" alt="studyindiabadhoindia.com">
               <div class="portfolio-info">
-                <h4>Kurakoo</h4>
-                <p>Web-App</p>
+                <h4>studyindiabadhoindia</h4>
+                <p>website</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/port.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web App Kurakoo"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/purnima143/Kurakoo" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/Shivam.png" class="img-fluid" alt="Shivam's portfolio screenshot">
-              <div class="portfolio-info">
-                <h4>Shivam's portfolio</h4>
-                <p>A Webpage showcasing my few work</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/Shivam.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web Design"><i class="bx bx-plus"></i></a>
-                  <a href="https://codepen.io/shvmsaini/pen/xxbYQEY" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio/studyindiabadhoindia.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="studyindiabadhoindia - A learning platform"><i class="bx bx-plus"></i></a>
+                  <a href="https://www.studyindiabadhoindia.com" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -371,21 +356,6 @@
                   <a href="assets/img/portfolio/portfolio/himanshu.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="My portfolio and personal website"><i class="bx bx-plus"></i></a>
                   <a href="https://himanshujaidka-github-io.vercel.app" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/doc2pen.png" class="img-fluid" alt="Doc2Pen logo">
-              <div class="portfolio-info">
-                <h4>Doc2Pen</h4>
-                <p>Web-app</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/doc2pen.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="A web app that converts text to Handwriting "><i class="bx bx-plus"></i></a>
-                  <a href="https://doc2pen.smaranjitghose.com" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -423,6 +393,21 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio/Shivam.png" class="img-fluid" alt="Shivam's portfolio screenshot">
+              <div class="portfolio-info">
+                <h4>Shivam's portfolio</h4>
+                <p>A Webpage showcasing my few work</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio/Shivam.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web Design"><i class="bx bx-plus"></i></a>
+                  <a href="https://codepen.io/shvmsaini/pen/xxbYQEY" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio/FlashChat.png" class="img-fluid" alt="FlashChat's screenshot">
               <div class="portfolio-info">
                 <h4>FlashChat</h4>
@@ -450,6 +435,67 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio/rocknroll.png" class="img-fluid" alt="RockNRoll Icecream homepage screenshot">
+              <div class="portfolio-info">
+                <h4>RockNRoll</h4>
+                <p>website</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio/rocknroll.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="rocknroll - A learning platform"><i class="bx bx-plus"></i></a>
+                  <a href="https://shvmsaini.github.io/RocknRoll1/" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio/port.png" class="img-fluid" alt="kurakoo logo">
+              <div class="portfolio-info">
+                <h4>Kurakoo</h4>
+                <p>Web-App</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio/port.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web App Kurakoo"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/purnima143/Kurakoo" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio/hmrtnp.png" class="img-fluid" alt="HMR logo">
+              <div class="portfolio-info">
+                <h4>HMR Training and Placement</h4>
+                <p>Website</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio/hmrtnp.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="HMR Training and Placement"><i class="bx bx-plus"></i></a>
+                  <a href="https://www.hmritm.ac.in/TNP/" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio/doc2pen.png" class="img-fluid" alt="Doc2Pen logo">
+              <div class="portfolio-info">
+                <h4>Doc2Pen</h4>
+                <p>Web-app</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio/doc2pen.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="A web app that converts text to Handwriting "><i class="bx bx-plus"></i></a>
+                  <a href="https://doc2pen.smaranjitghose.com" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         </div>
 
