--- a/index.html
+++ b/index.html
@@ -377,14 +377,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/documentation_page.jpg" class="img-fluid" alt="Documentation Page">
+              <img src="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.32.43 AM.png" class="img-fluid" alt="Documentation Page">
               <div class="portfolio-info">
-                <h4>Technical Documentation Page</h4>
-                <p>Web Page</p>
+                <h4>AgroBuy Android App</h4>
+                <p>Mobile App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/documentation_page.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="A web page for Technical Documentation"><i class="bx bx-plus"></i></a>
-                  <a href="https://codepen.io/shvmsaini/pen/aaovob" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.32.43 AM.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="A mobile app for client"><i class="bx bx-plus"></i></a>
+                  <a href="https://play.google.com/store/apps/details?id=com.agrobuy.app" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -467,14 +467,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/port.png" class="img-fluid" alt="kurakoo logo">
+              <img src="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.34.54 AM.png" class="img-fluid" alt="kurakoo logo">
               <div class="portfolio-info">
-                <h4>Kurakoo</h4>
-                <p>Web-App</p>
+                <h4>iDestination</h4>
+                <p>Website</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/port.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web App Kurakoo"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/purnima143/Kurakoo" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.34.54 AM.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Web Designing"><i class="bx bx-plus"></i></a>
+                  <a href="https://idestination.in" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -482,14 +482,14 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio/doc2pen.png" class="img-fluid" alt="Doc2Pen logo">
+              <img src="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.35.30 AM.png" class="img-fluid" alt="Doc2Pen logo">
               <div class="portfolio-info">
-                <h4>Doc2Pen</h4>
-                <p>Web-app</p>
+                <h4>Rahul Saini</h4>
+                <p>Website Desgining</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio/doc2pen.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="A web app that converts text to Handwriting "><i class="bx bx-plus"></i></a>
-                  <a href="https://doc2pen.smaranjitghose.com" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/portfolio/Screenshot 2023-04-27 at 12.35.30 AM.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="Rahul Saini Website "><i class="bx bx-plus"></i></a>
+                  <a href="https://missionfinancialliteracy.com/speaker/" target="__blank" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
