--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="http://devmanopensource.tech" target="__blank">Open Source</a></li>
+          <!-- <li><a class="nav-link scrollto " href="http://devmanopensource.tech" target="__blank">Open Source</a></li> -->
           <li><a class="nav-link scrollto " href="https://forms.gle/mC5g3yTuzqedSGVt7" target="__blank">Carrers</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -520,7 +520,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="himanshu-img">
+                <img src="assets/img/team/t1.jpg" class="img-fluid" alt="himanshu-img">
                 <div class="social">
                   <a href="https://www.linkedin.com/in/himanshu-jaidka-b39b191a4/" target="__blank"><i class="bi bi-linkedin"></i></a>
                   <a href="https://github.com/himanshujaidka" target="__blank"><i class="bi bi-github"></i></a>
@@ -532,7 +532,7 @@
               </div>
               <div class="member-info">
                 <h4>Himanshu</h4>
-                <span>Founder, Chief Executive Officer</span>
+                <span>Founder</span>
               </div>
             </div>
           </div>
@@ -540,18 +540,18 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2-alt.jpg" class="img-fluid" alt="shivam-saini-img">
+                <img src="assets/img/team/t2.jpg" class="img-fluid" alt="shivam-saini-img">
                 <div class="social">
                   <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
                   <a href="https://shvmsaini.github.io/" target="__blank"><i class="bi bi-portfolio">P</i></a>
                   <a href="https://github.com/shvmsaini"><i class="bi bi-github"></i></a>
                   <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
-                  <a href="https://www.linkedin.com/in/shivam-saini-5ba4b8141/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/shvmsaini/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Shivam Saini</h4>
-                <span>Co-founder, Chief Technology Officer</span>
+                <span>Co-founder</span>
               </div>
             </div>
           </div>
