--- a/index.html
+++ b/index.html
@@ -7,7 +7,96 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="Emerging IT company that serves all your IT needs" name="description">
   <meta content="DevMan Pvt. Ltd." name="copyright">
-  <meta content="DevMan Pvt. Ltd., Devman, IT solutions, IT services, IT company, create websites, create apps, create android apps, Digital Marketing, Video Editing, Consultancy, Development, New Delhi IT company, Indian IT company" name="keywords">
+  <meta content="DevMan Pvt. Ltd., Devman, IT solutions, IT services, IT company, create websites, create apps, create android apps, Digital Marketing, Video Editing, Consultancy, Development, New Delhi IT company, Indian IT company, SEO-friendly, web development
+,Content marketing,Inbound marketing,Google Analytics
+,Conversion tracking
+,Lead generation
+,Customer engagement
+,Reputation management
+,Link building
+,Influencer marketing
+                 ,App store optimization
+Keyword optimization,
+App analytics,
+User retention,
+Push notifications,
+In-app messaging,
+App indexing,
+App reviews,
+App ratings,
+App monetization
+                 ,Website optimization
+SEO strategy,
+Keyword research,
+On-page optimization,
+Off-page optimization,
+Backlinks building,
+Local SEO,
+Google My Business,
+Social media integration,
+User-generated content, Custom web software development,
+Enterprise web applications,
+Full-stack development services,
+Website security,
+Scalable web solutions,
+Cloud hosting solutions,
+Digital transformation,
+Industry-specific solutions,
+Agile development process,
+Client-centric approach,
+                 Progressive web apps,
+Augmented reality apps,
+Virtual reality apps,
+Internet of Things (IoT) apps,
+Blockchain app development,
+Artificial intelligence in app development,
+Machine learning in app development,
+Cloud-based app development,
+Wearable app development,
+Chatbot integration,Interactive web design,
+Mobile-first design,
+Cross-browser compatibility,
+Website speed optimization,
+Conversion rate optimization,
+User interface design,
+Landing page design,
+Parallax scrolling,
+Micro-interactions,
+Accessibility,
+                 Devman Pvt Ltd,
+Web design and development,
+Mobile app development company,
+Custom software solutions,
+Affordable web design services,
+Professional web development,
+Top-rated mobile app development,
+Responsive website design,
+Software development company,
+Innovative technology solutions,
+                 Mobile app development,
+iOS app development,
+Android app development,
+Hybrid app development,
+App design,
+App development process,
+App testing,
+App deployment,
+App maintenance,
+App upgrade,Web design services,
+Website development,
+Responsive design,
+User experience,
+E-commerce website,
+CMS website,
+Custom website design,
+Web graphics design,
+Website redesign,
+SEO-friendly website
+
+
+
+
+" name="keywords">
   
   <title>DevMan Pvt. Ltd.</title>
 
